# SkillMint

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  SkillHub_PRD.md  SkillMint_PRD.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/: release-desktop-notes.md  release-windows-notes.md
.learnings/: LEARNINGS.md
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/src/: commands.rs  lib.rs
branding/: README.md
docs/: 2026-02-27-skill-invoke-conversation-summary.md  browser-automation-integration.md  workclaw-codex-superpower-development-workflow.md  workclaw-kanban-collaboration-pilot.md  workclaw-kanban-pilot-delivery-rhythm.md  workclaw-kanban-pilot-metrics-retro-template.md
scripts/: apply-brand.mjs  apply-brand.test.mjs  build-runtime.mjs  check-dependency-overrides.test.mjs  check-installer-branding.test.mjs  check-local-build-script.test.mjs  check-release-docs.test.mjs  check-release-version.mjs  check-release-version.test.mjs  check-runtime-binary-selection.test.mjs  check-rust-test-scripts.test.mjs  check-start-app-script.test.mjs  check-updater-config.test.mjs  doctor-windows.mjs  doctor-windows.test.mjs  prepare-sidecar-runtime-bundle.mjs  prepare-sidecar-runtime-bundle.test.mjs  report-frontend-large-files.mjs  report-frontend-large-files.test.mjs  review-repo-hygiene.mjs  review-repo-hygiene.test.mjs  run-openclaw-im-host-phase3-verification.mjs  run-runtime-e2e.mjs  run-runtime-vitest.mjs  run-runtime-vitest.test.mjs  run-sidecar-tests.mjs  (+2 more)
(+986 files in other folders)
