[package]
name = "studio"
version = "0.1.0"
edition = "2021"

[lib]
name = "studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
skillpack-rs = { path = "../../../packages/skillpack-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
